--- a/index.html
+++ b/index.html
@@ -174,11 +174,11 @@
   <body>
     <div class="home">
       <h1 class="home__title">
-       こんにちは <br /><a
+       あけおめ〜！ <br /><a
           class="home__title__link"
           href="https://developers.line.biz/en/docs/liff/overview/"
           id="displayName"
-          >表示名を取得中...</a
+          >ことよろ〜〜</a
         >
       </h1>
       <div id="userId" class="user-id">ユーザーIDを取得中...</div>
