--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
           class="home__title__link"
           href="https://developers.line.biz/en/docs/liff/overview/"
           id="displayName"
-          >ことよろ〜〜</a
+          >ことよろ〜〜🐱</a
         >
       </h1>
       <div id="userId" class="user-id">ユーザーIDを取得中...</div>
